// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should renders with slots 1`] = `
<Card>
  <ForwardRef(Plate)
    className="root"
  >
    <div
      className="bg-color__basic-white root shadow-z1 rounds-sm__all"
      data-testid="plate"
    >
      <Card.Header
        key=".2"
      >
        <div
          className=""
        >
          [header]
        </div>
      </Card.Header>
      <Card.Content
        key=".0"
      >
        <div
          className="content"
        >
          [content]
        </div>
      </Card.Content>
      <Card.Footer
        key=".1"
      >
        <div
          className=""
        >
          [footer]
        </div>
      </Card.Footer>
    </div>
  </ForwardRef(Plate)>
</Card>
`;

exports[`Card should renders without props 1`] = `
<Card>
  <ForwardRef(Plate)
    className="root"
  >
    <div
      className="bg-color__basic-white root shadow-z1 rounds-sm__all"
      data-testid="plate"
    />
  </ForwardRef(Plate)>
</Card>
`;
